# digital-recognition

./: .gitignore  LICENSE  README.en.md  README.md
C++模型部署/: CMakeLists.txt  main.cpp
learn/: __init__.py  mymodel.py
model_param/: state_dict.pt
test/: result.csv  test.py
tool/: make_label.py  mnist_process.py
素材/num/: label.csv
